# alpm

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  bindgen.sh  search-index.js
alpm-sys/: Cargo.toml  README.md
alpm-sys/src/: errors.rs  ffi.rs  lib.rs  list.rs
alpm_sys/: ALPM_CAPABILITY_DOWNLOADER.v.html  ALPM_DB_USAGE_INSTALL.v.html  ALPM_DEP_MOD_ANY.v.html  ALPM_DEP_MOD_EQ.v.html  ALPM_DEP_MOD_GE.v.html  ALPM_ERR_CONFLICTING_DEPS.v.html  ALPM_ERR_DB_CREATE.v.html  ALPM_ERR_DB_INVALID_SIG.v.html  ALPM_ERR_DB_NOT_FOUND.v.html  ALPM_ERR_DB_NOT_NULL.v.html  ALPM_ERR_DB_NULL.v.html  ALPM_ERR_DB_VERSION.v.html  ALPM_ERR_DB_WRITE.v.html  ALPM_ERR_DLT_INVALID.v.html  ALPM_ERR_EXTERNAL_DOWNLOAD.v.html  ALPM_ERR_FILE_CONFLICTS.v.html  ALPM_ERR_HANDLE_LOCK.v.html  ALPM_ERR_HANDLE_NOT_NULL.v.html  ALPM_ERR_HANDLE_NULL.v.html  ALPM_ERR_LIBARCHIVE.v.html  ALPM_ERR_MEMORY.v.html  ALPM_ERR_NOT_A_FILE.v.html  ALPM_ERR_PKG_CANT_REMOVE.v.html  ALPM_ERR_PKG_IGNORED.v.html  ALPM_ERR_PKG_INVALID_CHECKSUM.v.html  ALPM_ERR_PKG_INVALID_NAME.v.html  ALPM_ERR_PKG_NOT_FOUND.v.html  ALPM_ERR_RETRIEVE.v.html  ALPM_ERR_SERVER_NONE.v.html  ALPM_ERR_TRANS_NOT_LOCKED.v.html  ALPM_ERR_TRANS_NOT_NULL.v.html  ALPM_ERR_TRANS_NOT_PREPARED.v.html  ALPM_ERR_UNSATISFIED_DEPS.v.html  ALPM_ERR_WRONG_ARGS.v.html  ALPM_EVENT_CHECKDEPS_DONE.v.html  ALPM_EVENT_CHECKDEPS_START.v.html  ALPM_EVENT_DATABASE_MISSING.v.html  ALPM_EVENT_DELTA_INTEGRITY_DONE.v.html  ALPM_EVENT_DELTA_INTEGRITY_START.v.html  ALPM_EVENT_DELTA_PATCHES_DONE.v.html  (+644 more)
chrono/: enum.Weekday.html  index.html  struct.Duration.html  trait.Datelike.html  trait.Timelike.html
idna/: fn.domain_to_ascii.html  fn.domain_to_unicode.html  index.html
lazy_static/: fn.initialize.html  index.html  trait.LazyStatic.html
libalpm/: Alpm.t.html  Cargo.toml  DownloadResult.t.html  PackageVersion.t.html  README.md  RepoOptions.t.html  SigLevel.t.html  TransactionFlags.t.html  capabilities.v.html  enum.DownloadResult.html  enum.Error.html  enum.Event.html  enum.LogLevel.html  enum.PackageFrom.html  enum.PackageRef.html  enum.Reason.html  enum.Validation.html  enum.VersionConstraintType.html  fn.capabilities.html  fn.version.html  index.html  sidebar-items.js  struct.Alpm.html  struct.Backup.html  struct.Caps.html  struct.Db.html  struct.Dependency.html  struct.File.html  struct.FileList.html  struct.Group.html  struct.LogLevels.html  struct.Options.html  struct.Package.html  struct.PackageVersion.html  struct.RepoOptions.html  struct.SigLevel.html  struct.Transaction.html  struct.TransactionFlags.html  struct.ValidationMethod.html  type.AlpmResult.html
libalpm-utils/: Cargo.toml
libalpm-utils/examples/: check_for_updates.rs  parse.rs  sys_upgrade.rs
libalpm-utils/src/: ini.rs  lib.rs
libalpm/db/: Db.t.html  struct.Db.html
libalpm/error/: AlpmResult.t.html  enum.Error.html  type.AlpmResult.html
libalpm/event/: enum.Event.html
libalpm/examples/: download_package.rs  package.rs  simple.rs  update.rs  version.rs
libalpm/log/: LogLevels.t.html  enum.LogLevel.html  struct.LogLevels.html
libalpm/options/: struct.Options.html  struct.RepoOptions.html
libalpm/package/: FileList.t.html  PackageFrom.t.html  PackageRef.t.html  Validation.t.html  ValidationMethod.t.html  VersionConstraintType.t.html  enum.PackageFrom.html  enum.PackageRef.html  enum.Reason.html  enum.Validation.html  enum.VersionConstraintType.html  struct.Backup.html  struct.Dependency.html  struct.File.html  struct.FileList.html  struct.Group.html  struct.Package.html  struct.PackageVersion.html  struct.ValidationMethod.html
libalpm/pgp/: struct.SigLevel.html
libalpm/src/: callbacks.rs  db.rs  error.rs  event.rs  group.rs  lib.rs  list.rs  log.rs  options.rs  package.rs  pgp.rs  trans.rs  types.rs  util.rs
libalpm/types/: Caps.t.html  enum.DownloadResult.html  struct.Caps.html
libalpm/util/: fn.get_servers.html  fn.uname.html  get_servers.v.html  index.html  sidebar-items.js  struct.UtsName.html
libarchive3_sys/: index.html
libc/: constant.ADFS_SUPER_MAGIC.html  constant.AFFS_SUPER_MAGIC.html  constant.AF_ALG.html  constant.AF_APPLETALK.html  constant.AF_ASH.html  constant.AF_ATMPVC.html  constant.AF_ATMSVC.html  constant.AF_AX25.html  constant.AF_BLUETOOTH.html  constant.AF_BRIDGE.html  constant.AF_CAIF.html  constant.AF_CAN.html  constant.AF_DECnet.html  constant.AF_ECONET.html  constant.AF_IB.html  constant.AF_IEEE802154.html  constant.AF_INET.html  constant.AF_INET6.html  constant.AF_IPX.html  (+1465 more)
printf/: Cargo.toml  README.md  build.rs  fn.printf.html  index.html  sidebar-items.js
printf/src/: lib.rs  parser.rs  printf_wrapper.c
printf/tests/: example.rs  simple.rs
(+1909 files in other folders)
