[package]
name = "alpm-sys"
version = "0.1.0"
repository = "https://github.com/derekdreery/alpm-sys"
documentation = "https://docs.rs/alpm-sys/"
license = "MIT OR Apache-2.0"
authors = [
    "Richard Dodd <richard.o.dodd@gmail.com>",
]
description = "alpm.h interface."
readme = "README.md"
keywords = ["pacman", "libalpm", "alpm", "arch", "linux"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[dependencies]
libc = "0.2"
libarchive3-sys = "0.1"

