[package]
name = "libalpm-utils"
version = "0.0.2"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/derekdreery/alpm"
homepage = "https://github.com/derekdreery/tree/master/libalpm-utils"
description = """
A library for helpful additions to libalpm not from the C library
"""

[dependencies]
nom = "^2.0"
libalpm = { path = "../libalpm" }
