[package]
name = "libalpm"
version = "0.2.0"
authors = [
    "Richard Dodd <richard.o.dodd@gmail.com>",
    "James Zhu <jameszhu@berkeley.edu>",
]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/derekdreery/alpm"
homepage = "https://github.com/derekdreery/alpm/tree/master/libalpm"
documentation = "https://derekdreery.github.io/alpm/libalpm/index.html"
description = """
An aspirationally safe wrapper around libalpm (the Arch Linux Package Manager).
"""

[dependencies]
printf = "0.1"
libc = "0.2"
url = "1.4"
lazy_static = "0.2"
chrono = "0.3"
alpm-sys = { path = "../alpm-sys" }
#alpm-sys = "0.2.0"

[dev-dependencies]
term = "0.4"
curl = "0.4"
